--- a/austin-training/labs/pd-student/kustomization.yaml
+++ b/austin-training/labs/pd-student/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdirectory
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdataconsole
+- pingdataconsole-ingress.yaml
 
 patches:
 - target:
