Adding pingdirectory-ingress.yaml

--- a/austin-training/labs/pd-student/kustomization.yaml
+++ b/austin-training/labs/pd-student/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdirectory
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdataconsole
 - pingdataconsole-ingress.yaml
+- pingdirectory-ingress.yaml
 
 patches:
 - target:
