--- a/austin-training/k8s-configs/student/kustomization.yaml
+++ b/austin-training/k8s-configs/student/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdirectory
 - https://github.com/pingidentity/pingidentity-devops-getting-started/20-kubernetes/01-standalone/pingdataconsole
+- pingdatasync
 - pingdataconsole-ingress.yaml
 - pingdirectory-ingress.yaml
 
@@ -18,7 +19,7 @@ patches:
         - name: SERVER_PROFILE_URL
           value: "https://github.com/pingidentity/pingidentity-server-profiles-playground.git"
         - name: SERVER_PROFILE_PATH
-          value: "austin-training/pd-student"
+          value: "austin-training/pingdirectory"
         - name: SERVER_PROFILE_BRANCH
           value: "austin-k8s"
         - name: ORCHESTRATION_TYPE
